--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -5,6 +5,10 @@
 }
 body, html {
     overflow-x: hidden !important;
+    -moz-box-sizing: border-box;
+     box-sizing: border-box;
+    height: 100%;
+    width: 100%;
 }
 body, hr{
   color: rgba(255, 255, 255, 0.54);
@@ -152,6 +156,22 @@ opacity: 0.7;
 /* GALLERY */
 
 #thumbs{float:left;width:200px;} #thumbs img{display:block;margin:0 0 10px;cursor:pointer;} #viewer{float:left;}
+
+
+
+/**********************************************/
+/* SHOP MAIN PAGE */
+/**********************************************/
+.card-img-top {
+   width: 100%;
+   height: 20rem;
+   border-radius: 20px;
+   opacity: 0.5;
+}
+
+.card-img-top:hover {
+  opacity: 1;
+}
 
 /* SHOP */
 .bi {
@@ -532,6 +552,7 @@ margin-left: 4px;
     height: 100%;
     padding-bottom: 6em;
   }
+
 
   /*SHOP*/
   #navbarToggler{
