--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -162,15 +162,22 @@ opacity: 0.7;
 /**********************************************/
 /* SHOP MAIN PAGE */
 /**********************************************/
-.card-img-top {
-   width: 100%;
-   height: 20rem;
-   border-radius: 20px;
-   opacity: 0.5;
+.card-product-list{
+  background-color: transparent;
 }
 
-.card-img-top:hover {
+.card-img-top {
+  height: 20rem;
+  border-radius: 20px;
+  box-shadow: 0.5;
+}
+.main-card-img{
+  opacity: 0.5;
+
+}
+.main-card-img:hover {
   opacity: 1;
+
 }
 
 /* SHOP */
@@ -366,13 +373,7 @@ height: 100%;
 
 
 
-.card{
-height: 370px;
-margin-top: auto;
-margin-bottom: auto;
-width: 400px;
-background-color: rgba(0,0,0,0.5) !important;
-}
+
 
 .social_icon span{
 font-size: 60px;
