--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -17,6 +17,7 @@ body, hr{
 .darker{
   background: black;
 }
+
 section.bg-home{
   position: relative;
   margin-bottom: 20px;
@@ -177,8 +178,9 @@ opacity: 0.7;
 }
 .main-card-img:hover {
   opacity: 1;
-
 }
+}
+
 
 /* SHOP */
 .bi {
@@ -189,6 +191,13 @@ opacity: 0.7;
 .fa-home, .fa-calendar-alt, .fa-shopping-cart{
   font-size: 1rem;
 }
+
+.cart-total span, .cart-total strong{
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
+
 
             /* TOGGLE */
 
